--- a/templates/addpage.html
+++ b/templates/addpage.html
@@ -30,6 +30,22 @@
     </div>
   </div>
 
+
+  <div class="mt-10">
+    <h2 class="text-2xl font-medium text-gray-700 mb-4">View Lesson Plan</h2>
+    <div class="">
+      <div
+        class="flex flex-col m-4"
+        id="lpContainer"
+        hx-get="/courses-list"
+        hx-trigger="load"
+        hx-target="this"
+        hx-swap="innerHTML"
+      ></div>
+    </div>
+  </div>
+</div>
+
   <div class="mt-10">
     <h2 class="text-2xl font-medium text-gray-700 mb-4">Statistics</h2>
     <div class="">
